--- a/wechat-app/pages/index/index.wxml
+++ b/wechat-app/pages/index/index.wxml
@@ -1,13 +1,45 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<view class='page'>
+  <swiper
+  indicator-dots="{{indicatorDots}}"
+  autoplay="{{autoplay}}"
+  interval="{{interval}}"
+  duration="{{duration}}"
+  circular="{{circular}}"
+  >
+    <block wx:for="{{imgUrls}}" wx:key="imgUrls">
+      <swiper-item>
+        <image src="{{item}}" class="slide-image" mode='aspectFill' />
+      </swiper-item>
     </block>
+  </swiper>
+  <view>
+    <view class="content">
+      <image src="{{img1}}" class='imgBox'>box1</image>
+      <image src="{{img2}}" class='imgBox'>box2</image>
+      <image src="{{img3}}" class='imgBox'>box3</image>
+      <image src="{{img4}}" class='imgBox'>box4</image>
+    </view>
+    <view class="content">
+      <image src="{{img5}}" class='imgBox'>box1</image>
+      <image src="{{img6}}" class='imgBox'>box2</image>
+      <image src="{{img7}}" class='imgBox'>box3</image>
+      <image src="{{img8}}" class='imgBox'>box4</image>
+    </view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  
+  <view class='divLine'></view>
+
+  <view class='article'>
+    <image src='/images/img_moment.png' class='article_img'></image>
+    <view class='article_title'>
+      <view>
+        <text class='article_line'>谁是上帝引发的一系列问题！！！</text>
+      </view>
+      <view>
+        <text class='article_content'>我就是上帝。</text>
+      </view>
+    </view>
   </view>
 </view>
+
