--- a/wechat-app/pages/index/index.wxss
+++ b/wechat-app/pages/index/index.wxss
@@ -1,21 +1,52 @@
-/**index.wxss**/
-.userinfo {
+/*index.wxss*/
+.slide-image {
+  width: 100%;
+  height: 150px;
+}
+
+.content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  padding-left: 10rpx;
+  padding-right: 10rpx;
+  margin: 10rpx 10rpx 10rpx 10rpx;
+  background-color: #fff;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.imgBox {
+  padding: 10rpx,10rpx,10rpx,10rpx;
+  flex:1;
+  height:160rpx;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.divLine {
+  background: red;
+  width: 100%;
+  height: 30rpx;
 }
 
-.usermotto {
-  margin-top: 200px;
+.article {
+  margin: 30rpx 30rpx 10rpx 30rpx;
+  background-color: #fff;
+  height: 210px;
+  border-radius: 6px;
+}
+
+.article_img{
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 150px;
+}
+
+.article_line{
+  margin-left: 20rpx;
+  width: 100%;
+}
+
+.article_content{
+  margin-left: 20rpx;
+  font-size: 14px;
+  color: #999;
+  width: 100%;
 }
