--- a/wechat-app/pages/cart/cart.wxml
+++ b/wechat-app/pages/cart/cart.wxml
@@ -1,2 +1,13 @@
 <!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<view class='page'>
+
+  <view class='weui-cell cart-cell' >
+    <view class="button_sp_area">
+      <button id="allcheck" class="weui-btn mini-btn" type="default" size="mini">全  选</button>
+    </view>
+    <view class="button_sp_area">
+      <button id="continue" class='weui-btn mini-btn' type="primary" size="mini">下一步</button>
+    </view>
+  </view>
+
+</view>
