--- a/wechat-app/pages/index/index.wxml
+++ b/wechat-app/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class='page'>
-  <swiper
+  <swiper class='slide'
   indicator-dots="{{indicatorDots}}"
   autoplay="{{autoplay}}"
   interval="{{interval}}"
@@ -15,23 +15,47 @@
   </swiper>
   <view>
     <view class="content">
-      <image src="{{img1}}" class='imgBox'>box1</image>
-      <image src="{{img2}}" class='imgBox'>box2</image>
-      <image src="{{img3}}" class='imgBox'>box3</image>
-      <image src="{{img4}}" class='imgBox'>box4</image>
+      <view class='content-box'>
+        <image src="{{img1}}" class='imgBox'>box1</image>
+        <view><text class='text-color'>纺织品</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img2}}" class='imgBox'>box2</image>
+        <view><text class='text-color'>瓶瓶罐罐</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img3}}" class='imgBox'>box3</image>
+        <view><text class='text-color'>纸张书本</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img4}}" class='imgBox'>box4</image>
+        <view><text class='text-color'>废弃电池</text></view>
+      </view>
     </view>
     <view class="content">
-      <image src="{{img5}}" class='imgBox'>box1</image>
-      <image src="{{img6}}" class='imgBox'>box2</image>
-      <image src="{{img7}}" class='imgBox'>box3</image>
-      <image src="{{img8}}" class='imgBox'>box4</image>
+      <view class='content-box'>
+        <image src="{{img5}}" class='imgBox'>box1</image>
+        <view><text class='text-color'>家用电器</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img6}}" class='imgBox'>box2</image>
+        <view><text class='text-color'>铁制废物</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img7}}" class='imgBox'>box3</image>
+        <view><text class='text-color'>破旧汽车</text></view>
+      </view>
+      <view class='content-box'>
+        <image src="{{img8}}" class='imgBox'>box4</image>
+        <view><text class='text-color'>全 部</text></view>
+      </view>
     </view>
   </view>
   
-  <view class='divLine'></view>
+  <view class='text_line'><text>精彩阅读</text></view>
 
   <view class='article'>
-    <image src='/images/img_moment.png' class='article_img'></image>
+    <image src='/images/article1.png' class='article_img'></image>
     <view class='article_title'>
       <view>
         <text class='article_line'>谁是上帝引发的一系列问题！！！</text>
