--- a/wechat-app/pages/my/my.wxml
+++ b/wechat-app/pages/my/my.wxml
@@ -25,7 +25,7 @@
   <view class='divLine'></view>
 
   <view class="weui-cells weui-cells_after-title">
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../address/address" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
             <image src="{{icon3}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
