--- a/wechat-app/pages/index/index.wxml
+++ b/wechat-app/pages/index/index.wxml
@@ -7,7 +7,7 @@
   duration="{{duration}}"
   circular="{{circular}}"
   >
-    <block wx:for="{{imgUrls}}" wx:key="imgUrls">
+    <block wx:for="{{imgUrls}}" wx:key="*this">
       <swiper-item>
         <image src="{{item}}" class="slide-image" mode='aspectFill' />
       </swiper-item>
