--- a/wechat-app/pages/my/my.wxml
+++ b/wechat-app/pages/my/my.wxml
@@ -6,7 +6,7 @@
   </view>
 
   <view class="weui-cells weui-cells_after-title">
-            <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <navigator url="../order/order_list" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                     <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
                 </view>
@@ -32,7 +32,7 @@
         <view class="weui-cell__bd">地址管理</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
     </navigator>
-    <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+    <navigator url="../message/message" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
             <image src="{{icon4}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
