--- a/wechat-app/pages/index/index.wxss
+++ b/wechat-app/pages/index/index.wxss
@@ -1,4 +1,65 @@
 /*index.wxss*/
+
+.modal-box {
+  z-index: 1;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+}
+ 
+.modal-content {
+  background: #fff;
+  width: 600rpx;
+  margin: 46% auto 0;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #f8f8f8;
+  border-top-left-radius: 16rpx;
+  border-top-right-radius: 16rpx;
+}
+ 
+.content-title {
+  height: 100rpx;
+  text-align: center;
+  font-size: 1.0rem;
+  margin: 0 auto;
+  line-height: 100rpx;
+}
+ 
+.content-text {
+  text-align: justify;
+  padding-left: 40rpx;
+  padding-right: 40rpx;
+  margin-bottom: 10px;
+  color: #999;
+}
+ 
+.modal-btns {
+  width: 600rpx;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+ 
+.dialog-btn {
+  border-radius: 0;
+  background: #fff;
+  height: 100rpx;
+  width: 100%;
+}
+ 
+.dialog-btn::after {
+  border: none;
+  border-radius: 0;
+}
+ 
+.confirm {
+  color: #3399cc;
+  border-bottom-left-radius: 16rpx;
+  border-bottom-right-radius: 16rpx;
+}
+
 .slide{
   margin: 0rpx 10rpx 0rpx 10rpx;
   border-radius: 6px; 
