--- a/wechat-app/pages/index/index.wxml
+++ b/wechat-app/pages/index/index.wxml
@@ -71,25 +71,27 @@
   
   <view class='text_line'><text>精彩阅读</text></view>
 
+<block>
   <view class='article' bindtap='readArticle' data-id='{{item.id}}'>
-    <image src='http://localhost:8088/ziyuan/images/article/article1.png' class='article_img'></image>
+    <image src='http://106.14.177.245:8088/ziyuan/images/article/article1.png' class='article_img'></image>
     <view class='article_title'>
       <view>
-        <text class='article_line'>谁是上帝引发的一系列问题！！！</text>
+        <text class='article_line'>保护环境 人人有责！！！</text>
       </view>
       <view>
-        <text class='article_content'>我就是上帝。</text>
+        <text class='article_content'>从身边的小事做起，节约利用资源。</text>
       </view>
     </view>
   </view>
+</block>
   <view class='article'>
-    <image src='http://localhost:8088/ziyuan/images/article/article1.png' class='article_img'></image>
+    <image src='http://106.14.177.245:8088/ziyuan/images/article/article1.png' class='article_img'></image>
     <view class='article_title'>
       <view>
-        <text class='article_line'>谁是上帝引发的一系列问题！！！</text>
+        <text class='article_line'>保护环境 人人有责！！！</text>
       </view>
       <view>
-        <text class='article_content'>我就是上帝。</text>
+        <text class='article_content'>从身边的小事做起，节约利用资源。</text>
       </view>
     </view>
   </view>
