--- a/wechat-app/pages/my/my.wxml
+++ b/wechat-app/pages/my/my.wxml
@@ -13,7 +13,7 @@
                 <view class="weui-cell__bd">我的订单</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
             </navigator>
-            <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <navigator url="wallet" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                 <view class="weui-cell__hd">
                     <image src="{{icon2}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
                 </view>
