--- a/wechat-app/pages/cart/cart.wxss
+++ b/wechat-app/pages/cart/cart.wxss
@@ -5,9 +5,11 @@ page{
 
 .page{
   height: calc(100% - 100rpx);
+  position: absolute;
+  /* height: 100%; */
 }
 
-.cart-cell{
+/* .cart-cell{
   position: fixed;
   background-color: #8699a4;
   padding: 8px 20px 8px 20px;
@@ -15,7 +17,7 @@ page{
   box-sizing: border-box;
   width: 100%;
   line-height: 100%;
-}
+} */
 
 .weui-icon-checkbox_circle{
   line-height: 100%;
@@ -59,6 +61,7 @@ page{
 }
 
 .cart-fixed{
+  z-index: 10;
   position: fixed;
   width: 100%;
   height: 100rpx;
